fixed the url alignment issue

--- a/main.scss
+++ b/main.scss
@@ -99,6 +99,7 @@
         }
         .o-feature-action-button-divwrap {
           float: right;
+          width: 100%;
         }
       }
 
@@ -181,6 +182,8 @@
         position: relative;
         left: 5px;
         padding: 10px;
+        width: 100%;
+        text-align: left;
       }
       .o-feature-editable-content .o-feature-action-url {
         border: 1px solid rgba(128, 128, 128, 0.36);
